--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 .header {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     margin: 0px;
     padding: 0px;
@@ -35,6 +35,7 @@ body {
 .principal {
     display: flex;
     flex-flow: row nowrap;
+    
 }
 
 .texto {
@@ -48,7 +49,17 @@ body {
     display: flex;
 }
 
+section {
+    display: flex;
+    flex-flow: row wrap;
 
+}
+
+.box-filmes {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+}
 
 /* MENU */
 
@@ -100,4 +111,9 @@ img.rede {
     width: 30px;
     height: 30px;
     border-radius:50px;
+}
+
+img.capa {
+    width: 90%;
+    height: 90%;
 }
