--- a/style.css
+++ b/style.css
@@ -34,28 +34,12 @@ body {
     margin: 0px;
 }
 
-.principal {
+div.principal {
     height: 100vh;
     width: 100%;
     display: flex;
     flex-flow: row nowrap;
     
-}
-
-.secundario {
-    width: 100%;
-    height: 50vh;
-    background-color: rgb(0, 0, 0);
-    display: flex;
-    flex-flow: row wrap;
-}
-
-.terciario {
-    width: 100%;
-    height: 50vh;
-    background-color: rgb(255, 255, 255);
-    display: flex;
-    flex-flow: row wrap;
 }
 
 .texto {
@@ -69,25 +53,15 @@ body {
     display: flex;
 }
 
-section.filmes {
+section.secundario {
 
     width: 100%;
     height: 50vh;
     background-color: black;
-    display: flex;
-    flex-flow: row wrap;
 
 }
 
-div.filmes1 {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: center;
-
-}
-
-section.series {
+section.terciario {
 
     width: 100%;
     height: 50vh;
@@ -97,12 +71,12 @@ section.series {
 
 }
 
-div.series1 {
+div.series {
     display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
+    flex-flow: row nowrap;
+    justify-content: space-around;
     align-items: center;
-
+    color: rgb(0, 0, 0);
 }
 
 
@@ -110,17 +84,16 @@ div.series1 {
                           /* texto PRINCIPAL */
 
 
-
 .texto1 {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: column wrap;
     justify-content: center;
     color: rgb(255, 255, 255);
 }
 
 .texto2 {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: column wrap;
     justify-content: center;
     color: rgb(0, 0, 0);
 }
